DispatchFlow/force-app/main/default/objects/Technician__c/fields/Active_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Active_Jobs__c</fullName>
    <label>Active Jobs</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <description>Current open work-order load. Maintained by the load roll-up trigger.</description>
</CustomField>