DispatchFlow/force-app/main/default/objects/Technician__c/fields/Is_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Available__c</fullName>
    <label>Is Available</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Whether the technician can currently be dispatched.</description>
</CustomField>