DispatchFlow/force-app/main/default/objects/Technician__c/fields/Max_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Max_Jobs__c</fullName>
    <label>Max Jobs</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>Capacity — the most concurrent jobs this technician can hold.</description>
</CustomField>