DispatchFlow/force-app/main/default/objects/Technician__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <label>Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>HVAC</fullName><default>false</default><label>HVAC</label></value>
            <value><fullName>Electrical</fullName><default>false</default><label>Electrical</label></value>
            <value><fullName>Plumbing</fullName><default>false</default><label>Plumbing</label></value>
            <value><fullName>Networking</fullName><default>false</default><label>Networking</label></value>
            <value><fullName>General</fullName><default>false</default><label>General</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>